[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/ui/Settings.gd" type="Script" id=1]
[ext_resource path="res://scene/ui/SettingSetter.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/ui/Button.tscn" type="PackedScene" id=3]

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="."]
margin_left = 480.0
margin_top = 220.0
margin_right = 531.0
margin_bottom = 234.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseSensitivity" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 252.0
margin_right = 634.0
margin_bottom = 268.0
max_value = 1.0
step = 0.05

[node name="WheelSensitivity" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 268.0
margin_right = 634.0
margin_bottom = 284.0
max_value = 1.0
step = 0.05

[node name="SpawnDistance" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 284.0
margin_right = 634.0
margin_bottom = 300.0
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="HUDOpacity" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 300.0
margin_right = 634.0
margin_bottom = 316.0
max_value = 1.0
step = 0.05

[node name="EffectsVolume" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 316.0
margin_right = 634.0
margin_bottom = 332.0
max_value = 1.0
step = 0.05

[node name="MusicVolume" parent="." instance=ExtResource( 2 )]
margin_left = 506.0
margin_top = 332.0
margin_right = 634.0
margin_bottom = 348.0
max_value = 1.0
step = 0.05

[node name="MouseSensitivityLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 252.0
margin_right = 503.0
margin_bottom = 266.0
text = "Mouse Sensitivity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WheelSensitivityLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 268.0
margin_right = 501.0
margin_bottom = 282.0
text = "Wheel Sensitivity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnDistanceLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 284.0
margin_right = 490.0
margin_bottom = 298.0
text = "Spawn Distance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDOpacityLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 300.0
margin_right = 473.0
margin_bottom = 314.0
text = "HUD Opacity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 316.0
margin_right = 485.0
margin_bottom = 330.0
text = "Effects Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="."]
margin_left = 390.0
margin_top = 332.0
margin_right = 481.0
margin_bottom = 346.0
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" parent="." instance=ExtResource( 3 )]
margin_left = 487.0
margin_top = 361.0
margin_right = 521.0
margin_bottom = 375.0
text = "Done"
[connection signal="value_changed" from="MouseSensitivity" to="." method="_on_MouseSensitivity_value_changed"]
[connection signal="value_changed" from="WheelSensitivity" to="." method="_on_WheelSensitivity_value_changed"]
[connection signal="value_changed" from="SpawnDistance" to="." method="_on_SpawnDistance_value_changed"]
[connection signal="value_changed" from="HUDOpacity" to="." method="_on_HUDOpacity_value_changed"]
[connection signal="value_changed" from="EffectsVolume" to="." method="_on_EffectsVolume_value_changed"]
[connection signal="value_changed" from="MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]
